--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "verion":"0.0.0",
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -11,7 +12,8 @@
     "karma-phantomjs-launcher": "~0.1.0",
     "karma": "~0.10.2",
     "bower": "~1.2.7",
-    "phantomjs": "~1.9.2-2"
+    "phantomjs": "~1.9.2-2",
+    "grunt-bump": "0.0.13"
   },
   "engines": {
     "node": ">=0.8.0"
